added some color variables and used them for the navBar

--- a/theming/_variables.scss
+++ b/theming/_variables.scss
@@ -1,3 +1,7 @@
 ////////////////////////////////////////////////
 // DEFAULT
 ////////////////////////////////////////////////
+$UTD-ORANGE: rgb(232,117,0);
+$UTD-GREEN: rgb(18,71,52);
+
+$primary: $UTD-GREEN;
