drop-down navbar items also hover a different color now

--- a/theming/_variables.scss
+++ b/theming/_variables.scss
@@ -14,6 +14,10 @@ $secondary: $SHPE-ORANGE;
     color:$SHPE-ORANGE !important;
 }
 
+.navbar-link:hover{
+    color:$SHPE-ORANGE !important;
+}
+
 .navbar{
     height: 4em;
 }
