fixed a typo on the _variables.css

--- a/theming/_variables.scss
+++ b/theming/_variables.scss
@@ -6,6 +6,7 @@ $UTD-GREEN: rgb(18,71,52);
 
 $SHPE-BLUE: #001F5B;
 $SHPE-ORANGE: #FD652F;
+$SHPE-LIGHT-BLUE: #72A9BE;
 
 $primary: $SHPE-BLUE;
 $secondary: $SHPE-ORANGE;
