--- a/theming/_variables.scss
+++ b/theming/_variables.scss
@@ -27,10 +27,21 @@ $secondary: $SHPE-ORANGE;
 }
 
 
+.content{
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+}
+
 footer {
     margin-top: auto;
 }
 
+#parentDiv {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column
+}
 .center-image{
     margin-left: auto;
     margin-right: auto;
