--- a/theming/_variables.scss
+++ b/theming/_variables.scss
@@ -26,7 +26,7 @@ $secondary: $SHPE-ORANGE;
     height: 4em;
 }
 
-.content{
+._content{
     display: flex;
     flex-direction: column;
     flex: 1;
