--- a/theming/_variables.scss
+++ b/theming/_variables.scss
@@ -46,3 +46,11 @@ footer {
     margin-left: auto;
     margin-right: auto;
 }
+
+
+//// Homepage //////
+.gradient-background{
+    background: linear-gradient(180deg, rgba(0, 112, 192, 0.07) 58.33%, rgba(255, 255, 255, 0) 100%);
+}
+
+///////
