added the intro welcome lorem ipsum paragraph

--- a/theming/_variables.scss
+++ b/theming/_variables.scss
@@ -53,4 +53,11 @@ footer {
     background: linear-gradient(180deg, rgba(0, 112, 192, 0.07) 58.33%, rgba(255, 255, 255, 0) 100%);
 }
 
+.welcome-text{
+    font-weight: 500;
+    font-size: 48px;
+    line-height: 56px;
+    text-align: left;
+}
+
 ///////
