added increased shadow on card hover

--- a/theming/_variables.scss
+++ b/theming/_variables.scss
@@ -70,4 +70,8 @@ footer {
     border-radius: 22px;
     filter: drop-shadow(-3px 11px 44px rgba(0, 0, 0, 0.2));
 }
+
+.homepage-tile:hover{
+    filter: drop-shadow(-3px 11px 44px rgba(0, 0, 0, 0.3));
+}
 ///////
