added a little hover shadow effect on the temoc icon

--- a/theming/_variables.scss
+++ b/theming/_variables.scss
@@ -91,4 +91,8 @@ footer {
       margin-right: 0 !important;
     }
   }
+
+  .temoc:hover {
+    filter: drop-shadow(-3px 7px 20px rgba(0, 0, 0, 0.3));
+  }
 ///////
