added a margin below the homepage-tile for smaller resolution (so it does not intersect with the top of the temoc icon)

--- a/theming/_variables.scss
+++ b/theming/_variables.scss
@@ -92,6 +92,15 @@ footer {
     }
   }
 
+  .homepage-tile{}
+
+  @media only screen and (max-width: 768px) {
+    /* For mobile phones: */
+    [class*="homepage-tile"] {
+      margin-bottom: 150px !important;
+    }
+  }
+
   .temoc:hover {
     filter: drop-shadow(-3px 7px 20px rgba(0, 0, 0, 0.3));
   }
