--- a/theming/_variables.scss
+++ b/theming/_variables.scss
@@ -122,4 +122,13 @@ footer {
       margin-top: 50px !important;
     }
   }
+
+  .benefits-p{
+    
+    color: rgba(0, 0, 0, 0.54);
+
+    padding-top: 3vw;
+    padding-left: 10vw;
+    padding-right: 10vw;
+  }
 ///////
