started working on the footer (wrong branch I know working on fixing that)

--- a/theming/_variables.scss
+++ b/theming/_variables.scss
@@ -131,4 +131,8 @@ footer {
     padding-left: 10vw;
     padding-right: 10vw;
   }
+
+  .footer-text{
+    color: rgba(0, 0, 0, 0.6);
+  }
 ///////
