--- a/theming/_variables.scss
+++ b/theming/_variables.scss
@@ -92,6 +92,9 @@ footer {
   }
 
   .homepage-tile{
+    width: 100%;
+    min-width: 300px;
+    overflow-x: hidden;
   }
 
   @media only screen and (max-width: 768px) {
