Creation of Officer Page
Displays current officers at UTD SHPE. Utilizes json and Officer Component to get and display the information about each officer

--- a/theming/_variables.scss
+++ b/theming/_variables.scss
@@ -5,7 +5,7 @@ $UTD-ORANGE: rgb(232,117,0);
 $UTD-GREEN: rgb(18,71,52);
 
 
-$dimensions: 16 24 32 48 64 96 128 256 !default; //Variable for image size classes ex: is-128x128, etc.: https://bulma.io/documentation/elements/image/
+$dimensions: 16 24 32 48 64 96 128 215 256 !default; //Variable for image size classes ex: is-128x128, etc.: https://bulma.io/documentation/elements/image/
 
 $SHPE-BLUE: #001F5B;
 $SHPE-ORANGE: #FD652F;
