--- a/theming/_variables.scss
+++ b/theming/_variables.scss
@@ -36,3 +36,20 @@ footer {
     margin-right: auto;
 }
 
+.officer:hover{
+    margin: 0;
+    transform: scale(1.08);
+}
+
+.officer {
+    margin: 20px 0;
+    transition: transform 450ms;
+}
+
+.email {
+    display:none;
+}
+ 
+div .officer:hover span .email {
+    display: block;
+}
