--- a/theming/_variables.scss
+++ b/theming/_variables.scss
@@ -134,10 +134,28 @@ footer {
   padding-right: 10vw;
 }
 
-.small-res-newsletter{
-  visibility: hidden;
+.small-res-newsletter-form{
+  display: none;
+  margin-bottom: 35px !important;
 }
 
+@media only screen and (max-width: 1400px) {
+  /* For mobile phones: */
+  [class*="small-res-newsletter"] {
+    display: initial;
+  }
+}
+
+.big-res-newsletter-form{
+  display: initial;
+}
+
+@media only screen and (max-width: 1400px) {
+  /* For mobile phones: */
+  [class*="big-res-newsletter-form"] {
+    display: none !important;
+  }
+}
 /////////////////////////////////////////////////////
 
 //////////////////Footer//////////////////////
