replaced the Newsletter component in the homepage with the InstagramFeed component

--- a/theming/_variables.scss
+++ b/theming/_variables.scss
@@ -58,13 +58,10 @@ $secondary: $SHPE-ORANGE;
   text-align: left;
 }
 
-.homepage-tile {
-  background: #ffffff;
-  border-radius: 22px;
-  filter: drop-shadow(-3px 11px 44px rgba(0, 0, 0, 0.2));
+.social-media-component {
 }
 
-.homepage-tile:hover {
+.social-media-component:hover {
   filter: drop-shadow(-3px 11px 44px rgba(0, 0, 0, 0.3));
 }
 
