created a project component. Added the Tech Officer info from Officer.json

--- a/theming/_variables.scss
+++ b/theming/_variables.scss
@@ -189,6 +189,8 @@ a {
   opacity: 0.4;
 }
 /////////////////////////////////////////////
+
+////////////////////Officer Page/////////////
 .officer:hover{
     margin: 0;
     transform: scale(1.08);
@@ -206,3 +208,10 @@ a {
 div .officer:hover span .email {
     display: block;
 }
+/////////////////////////////////////////////
+
+///////////Technology Team page//////////////
+
+.projects{}
+
+/////////////////////////////////////////////
