added a TechTeamProjects.json, the tech-team page then uses it to generate TechProject components

--- a/theming/_variables.scss
+++ b/theming/_variables.scss
@@ -214,4 +214,8 @@ div .officer:hover span .email {
 
 .projects{}
 
+.projects-title{
+  color: $primary !important;
+}
+
 /////////////////////////////////////////////
