fixed the z-layering on the project cards

--- a/theming/_variables.scss
+++ b/theming/_variables.scss
@@ -221,6 +221,7 @@ div .officer:hover span .email {
   margin: 0;
   transform: scale(1.08);
   filter: drop-shadow(-3px 11px 44px rgba(0, 0, 0, 0.3));
+  z-index: 1;
 }
 
 .projects-title{
