added <strong to some parts of the tech team description. Made the <strong> tag also turn the text into whatever color is defined as

--- a/theming/_variables.scss
+++ b/theming/_variables.scss
@@ -228,4 +228,8 @@ div .officer:hover span .email {
   color: $primary !important;
 }
 
+strong{
+  color: $primary !important;
+}
+
 /////////////////////////////////////////////
