Made the title of the projects section more prominent (centered, bigger font, underlines)

--- a/theming/_variables.scss
+++ b/theming/_variables.scss
@@ -225,7 +225,7 @@ div .officer:hover span .email {
 }
 
 .projects-title{
-  color: $primary !important;
+  color: $primary !important
 }
 
 strong{
