--- a/theming/_variables.scss
+++ b/theming/_variables.scss
@@ -174,6 +174,12 @@ a {
   text-decoration: none;
 }
 
+.aboutPage  {
+  color: rgb(0, 68, 170) !important;
+  background-color: transparent;
+  text-decoration: none;
+}
+
 .centered-div {
   width: 50%;
   margin: 0 auto;
