Updated default link color to blue and made only footer links gray until hovered over.

--- a/theming/_variables.scss
+++ b/theming/_variables.scss
@@ -175,13 +175,13 @@ footer {
 }
 
 a {
-  color: rgba(0, 0, 0, 0.6) !important;
+  color: rgb(0, 68, 170) !important;
   background-color: transparent;
   text-decoration: none;
 }
 
-.aboutPage  {
-  color: rgb(0, 68, 170) !important;
+.footerLinks  {
+  color: rgba(0, 0, 0, 0.6) !important;
   background-color: transparent;
   text-decoration: none;
 }
