Changed footer-link to default  gray.

--- a/theming/_variables.scss
+++ b/theming/_variables.scss
@@ -180,7 +180,7 @@ a {
   text-decoration: none;
 }
 
-.footerLinks  {
+.footer-link {
   color: rgba(0, 0, 0, 0.6) !important;
   background-color: transparent;
   text-decoration: none;
