Changed default link color to blue and left footer links as gray. (#68)
* Changed the email link color on the Officers page to blue.

* Updated default link color to blue and made only footer links gray until hovered over.

* Changed footer-link to default  gray.

--- a/theming/_variables.scss
+++ b/theming/_variables.scss
@@ -175,6 +175,12 @@ footer {
 }
 
 a {
+  color: rgb(0, 68, 170) !important;
+  background-color: transparent;
+  text-decoration: none;
+}
+
+.footer-link {
   color: rgba(0, 0, 0, 0.6) !important;
   background-color: transparent;
   text-decoration: none;
