got the general layout of the page down, now we just have to fill in the contents

--- a/theming/_variables.scss
+++ b/theming/_variables.scss
@@ -240,3 +240,11 @@ div .officer:hover span .email {
   color: $primary !important
 }
 /////////////////////////////////////////////
+
+///////////////////Getting involved//////////
+
+.itemCard {
+  width: 100vw !important;
+}
+
+/////////////////////////////////////////////
