working on conference page

--- a/theming/_variables.scss
+++ b/theming/_variables.scss
@@ -256,3 +256,10 @@ div .officer:hover span .email {
 }
 
 /////////////////////////////////////////////
+// Conference Page Styles
+/////////////////////////////////////////////
+
+.testClass {
+  background-color: green !important;
+
+}
