--- a/theming/_variables.scss
+++ b/theming/_variables.scss
@@ -256,3 +256,136 @@ div .officer:hover span .email {
 }
 
 /////////////////////////////////////////////
+
+///////////////Membership page//////////////////////////////
+.add-ul-bold {
+  list-style-type: disc;
+  list-style-position: inside;
+}
+
+table ul,
+table ol {
+  list-style-position: inside;
+  margin: 4px;
+}
+
+.join {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  h1 {
+    text-align: center;
+    text-transform: uppercase;
+    border-bottom: 1px solid gray;
+    letter-spacing: 15px;
+    color: $SHPE-BLUE;
+
+    span {
+      letter-spacing: 0px;
+    }
+  }
+}
+
+.membership {
+  text-align: center;
+  text-transform: uppercase;
+  border-bottom: 1px solid gray;
+  color: #001f5b;
+  letter-spacing: 40px;
+}
+
+.main-container {
+  display: flex;
+  min-height: 50vh;
+  width: 100%;
+}
+
+.box {
+  .h2-utd {
+    height: 20%;
+    background: linear-gradient(to right, #72a9be, #001f5b);
+  }
+
+  .h2-local {
+    height: 20%;
+    background: linear-gradient(to left, #72a9be, #001f5b);
+  }
+
+  h2 {
+    color: white;
+    text-transform: uppercase;
+    font-size: 250%;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    height: 100%;
+  }
+}
+
+.box1 {
+  flex-grow: 1;
+  width: 100%;
+  height: 100%;
+}
+
+.box2 {
+  right: 0%;
+  flex-grow: 1;
+  width: 100%;
+  height: 100%;
+}
+
+.add-ul-bold ol {
+  font-weight: none;
+}
+
+li {
+  font-weight: normal;
+}
+
+table {
+  width: 100%;
+  height: 39vh;
+}
+
+.table-border-top {
+  height: 1%;
+  text-transform: uppercase;
+  font-size: large;
+  border-bottom: 1px solid gray;
+}
+
+.has-text-centered {
+  color: #001f5b;
+  border-bottom: 1px solid gray;
+}
+
+.none {
+  padding-left: 20px;
+  list-style: none;
+}
+
+.border-right {
+  border-right: 1px solid gray;
+}
+
+// tr,
+// th,
+// td {
+//     width: 50%;
+// }
+.width-50 {
+  width: 50%;
+}
+
+.pl-4 span {
+  text-decoration: underline;
+}
+
+.has-hover:hover {
+  cursor: pointer;
+  color: #72a9be;
+}
+/////////////////////////////
