--- a/theming/_variables.scss
+++ b/theming/_variables.scss
@@ -357,10 +357,10 @@ table {
   border-bottom: 1px solid gray;
 }
 
-.has-text-centered {
-  color: #001f5b;
-  border-bottom: 1px solid gray;
-}
+// .has-text-centered {
+//   color: #001f5b;
+//   border-bottom: 1px solid gray;
+// }
 
 .none {
   padding-left: 20px;
