Youtube video fullscreen enable, centered paragraph, added some descriptive word to the paragraph

--- a/theming/_variables.scss
+++ b/theming/_variables.scss
@@ -240,7 +240,17 @@ div .officer:hover span .email {
   color: $primary !important
 }
 /////////////////////////////////////////////
+///////////////podcast///////////
+.podcastVideo{
+  transition: transform 1000ms;
+}
 
+.podcastVideo:hover{
+  transform: scale(1.08);
+  filter: drop-shadow(-3px 11px 44px rgba(0, 0, 0, 0.3));
+  z-index: 1;
+}
+///////////////`
 ///////////////////Getting involved//////////
 
 .itemCard {
